--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ grid = { git = "https://github.com/ScottyThePilot/grid" }
 noise = { git = "https://github.com/ScottyThePilot/noise-rs" }
 rand = "0.8.4"
 rand_xoshiro = "0.6.0"
+rayon = "1.5.1"
+once_cell = "1.9.0"
 
 [dependencies.pyo3]
 version = "0.15.1"
