--- a/kettenkrad/Cargo.toml
+++ b/kettenkrad/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ahash = { version = "0.8.6" }
+ahash = { version = "0.8.6", features = ["serde"] }
 exgrid = { git = "https://github.com/ScottyThePilot/exgrid", branch = "dev" }
 fastanvil = { version = "0.30.0" }
 fastnbt = { version = "2.4.4" }
@@ -12,5 +12,6 @@ flate2 = { version = "1.0" }
 glam = { version = "0.24" }
 itertools = { version = "0.11.0" }
 serde = { version = "1.0", features = ["derive"] }
+serde-big-array = "0.5.1"
 serde_json = { version = "1.0" }
 thiserror = { version = "1.0" }
